7.jul (ws)
      - gonville font integration
6.jul (ws)
      - applied patch from Miwarre: Show/hide courtesy time signature
        and clefs for individual elements
5.jul  (la)
      - fix #6388: Crash on importing a MusicXML file (beam problem)
2.jul (ws)
      - instead of saving the _userOff value, the actual screen position
        of movable elements is saved.
      (la)
      - fix #6335: Crash on creating triplet on a chord
1.jul (ws)
      - add patch from Miwarre: Hide/show naturals and courtesy keys
        for individual key sigs
      (la)
      - fix #6318: MusicXML export of syllabic is broken
      - Add message if unknown extension + no empty tab
29.jun (la)
      - fix #6264: Chordnames not transposed on copy-paste or concert pitch
      - fix #6283: R key does not work as expected in drum staff
28.jun (ws)
      - applied page offset patch from Miwarre
27.jun (ws)
      - more refactoring of spanner & slur elements eleminating
        element->tick
      (la)
      - fix #6254: Concert pitch lossy transposition (Patch by Aaron Epstein)
      - fix #6275: Remove the last inserted vertical frame make musecore hangs
26.jun (la)
      - Page numbers are no more editable in the score since formatting does not stick
      - fix #5906: Tick value shown in Object Inspector limited to 999999
      - fix #6253: High CPU usage when idle if reverb is on
25.jun (la)
      - fix #6079: problem in multimeasure rests with 2 staves score
24.jun (ws)
      - undo should now (mostly) work for changes made in edit mode
        for Spanner elements.
      - Changed implementation of HairPin, Otta, TextLine, Volta
        Trill and Pedal. They move from the global list in Score
        to the Segment of their startElement. Position is determined
        by startElement-endElement instead of tick positions.
        Introduced class Spanner as base class for this elements.
        Import/Export modules need to be adapted to this new scheme.
      (la)